--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <body>
     <img src="img/logo.png" alt="ToDo" class="logo">
     <div class="container">
+      <section class="modify">
+        <div class="addlist">
+          <label>New List:</label>
+          <input type="text">
+          <button>Add List</button>
+        </div>
+      </section>
+    </div>
+
+    <div class="container">
       <section class="todo">
         <section class="lists">
-          <div class="item list">
+          <div class="item list selected">
             <div class="name">List 1</div>
             <div class="close">&times;</div>
           </div>
@@ -43,14 +53,6 @@
         </section>
       </section>
     </div>
-    <div class="container">
-      <section class="modify">
-        <div class="addlist">
-          <label>New List:</label>
-          <input type="text">
-          <button>Add List</button>
-        </div>
-      </section>
-    </div>
+
   </body>
 </html>
