Renamed static to public, created static-demo subdirectory, added pyc to gitignore.

--- a/static-demo/index.html
+++ b/static-demo/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>My ToDo</title>
-    <link rel="icon" href="/public/favicon.ico">
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="/public/img/logo.png" alt="ToDo" class="logo">
+    <img src="img/logo.png" alt="ToDo" class="logo">
     <div class="container">
       <section class="modify">
         <div class="addlist">
@@ -54,7 +54,5 @@
       </section>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/public/script.js"></script>
   </body>
 </html>
