Added ul and li elements.

--- a/static-demo/index.html
+++ b/static-demo/index.html
@@ -19,38 +19,38 @@
 
     <div class="container">
       <section class="todo">
-        <section class="lists">
-          <div class="item list selected">
+        <ul class="lists">
+          <li class="item list selected">
             <div class="name">List 1</div>
             <div class="close">&times;</div>
-          </div>
-          <div class="item list">
+          </li>
+          <li class="item list">
             <div class="name">List 2</div>
             <div class="close">&times;</div>
-          </div>
-          <div class="item list">
+          </li>
+          <li class="item list">
             <div class="name">List 3</div>
             <div class="close">&times;</div>
-          </div>
-        </section>
-        <section class="tasks">
-          <div class="item task">
+          </li>
+        </ul>
+        <ul class="tasks">
+          <li class="item task">
             <div class="name">This is a task.</div>
             <input type="checkbox" class="complete">
-          </div>
-          <div class="item task">
+          </li>
+          <li class="item task">
             <div class="name">This is another task.</div>
             <input type="checkbox" class="complete">
-          </div>
-          <div class="item task">
+          </li>
+          <li class="item task">
             <div class="name">This is yet another task.</div>
             <input type="checkbox" class="complete">
-          </div>
+          </li>
           <section class="addtask">
             <input type="text">
             <button>Add Task</button>
           </section>
-        </section>
+        </ul>
       </section>
     </div>
 
